fixes projects img stretching and adds chinese translated content

--- a/styles/style.css
+++ b/styles/style.css
@@ -173,6 +173,7 @@ margin-block: 20px;
 
 .project-inner-content > p {
   align-self: center;
+  font-size: 20px;
 }
 
 .project-inner-content > img {
